Bug 1890189: make cache control parsing case insensitive. r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D216487